@@ -5,6 +5,7 @@
 - Drop files in /usr/share, /usr/src, and /usr/include to reduce memory use
 - Add error checking of the trust database
 - Fixed threading issue during rpm update
+- Add option to delete the trust database to cli, --delete-db
 
 0.9.3
 - In fapolicyd-cli, add a --list option to list rules
